2009-12-28  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Update cookie validity method's description

2009-12-28  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer (deleted):
	* flumotion/component/consumers/httpfragstreamer/common.py (deleted):
	* flumotion/component/consumers/httpfragstreamer/mpegtssegmenter.py
	  (deleted):
	* flumotion/component/consumers/httpfragstreamer/httpfragstreamer.xml
	  (deleted):
	* flumotion/component/consumers/httpfragstreamer/resources.py
	  (deleted):
	* flumotion/component/consumers/httpfragstreamer/admin_gtk.py
	  (deleted):
	* flumotion/component/consumers/httpfragstreamer/__init__.py (deleted):
	* flumotion/component/consumers/httpfragstreamer/Makefile.am (deleted):
	* flumotion/component/consumers/httpfragstreamer/httpfragstreamer.py
	  (deleted):
	* flumotion/component/consumers/httpfragstreamer/hlsring.py (deleted):
	* flumotion/component/consumers/httpfragstreamer/httpfragstreamer.glade
	  (deleted):
	Delete old component's folder

2009-12-28  Andoni Morales Alastruey  <amorales@flumotion.com>

	* configure.ac:
	* flumotion/Makefile.am:
	* flumotion/component/consumers/applestreamer/resources.py:
	* flumotion/common (deleted):
	* flumotion/common/__init__.py (deleted):
	* flumotion/common/Makefile.am (deleted):
	* flumotion/common/uuid.py (deleted):
	Delete local copy of uuid since it's going to be deployed using
	a separate package

2009-12-28  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/applestreamer.xml:
	Rename flumotion component to http-applestreamer according to
	the rst

2009-12-24  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Get the number of active clients from the stats
	Add missing 'socket' import

2009-12-24  Andoni Morales Alastruey  <amorales@flumotion.com>
